--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-catboost==1.0.4
+catboost==1.2.2
 joblib==1.1.0
 lightgbm==3.3.2
 optuna==2.10.0
 streamlit==1.8.1
 xgboost==1.5.2
 markupsafe==1.1.1
-zenml==0.35.1
+zenml==0.53.1
+pytest==7.4.3
